crates/swc_ecma_parser/tests/test262-error-references/fail/9f08fdb641588efc.module.js.stderr
error: Unexpected token `,`. Expected an identifier
 --> $DIR/tests/test262-parser/fail/9f08fdb641588efc.module.js:1:13
  |
1 | import {b,c,,} from 'a';
  |             ^

